--- a/.github/workflows/action_one.yml
+++ b/.github/workflows/action_one.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip -m pip install --upgrade pip
+        pip install --upgrade pip
         pip install pytest
     - name: Run tests
       run: |
