--- a/.github/workflows/action_one.yml
+++ b/.github/workflows/action_one.yml
@@ -17,11 +17,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Clear pip cache
-        run: pip cache purge
-
-      - name: Upgrade pip
-        run: timeout 60s python -m pip install --upgrade pip || echo "pip upgrade timed out"
+      - name: Install stable pip version
+        run: python -m pip install pip==23.2.1
 
       - name: Install dependencies
         run: pip install pytest
