--- a/.github/workflows/action_one.yml
+++ b/.github/workflows/action_one.yml
@@ -21,7 +21,7 @@ jobs:
         run: python -m pip install pip==23.2.1
 
       - name: Install dependencies
-        run: pip install pytest
+        run: python -m pip install --disable-pip-version-check pytest
 
       - name: Run tests
         run: |
